# BoundLab

./: .gitignore  CLAUDE.md  README.md  a.onnx  a.py  a.smt2  boundlab_distance_bound.onnx  conda-env.yml  merged.onnx  model.onnx  pixi.toml  plan_linearop.md  pyproject.toml  reduce_mean.onnx  ref_transformer.py  relu.md  requirements.txt  vit_pruning.onnx
bert-experiments/: certify_notanh.py  certify_sst2_bert.py  certify_sst2_bert_6layer.py  delta_top1_bert.py  mnist_diff_benchmark.py  run_bert_lim-tok.py
compare/: tn.py
conda-recipe/: meta.yaml
docs/: Makefile  conf.py  contributing.md  index.md
examples/: certify_transformer.py  certify_vit.py  zono_profile_heavy.py
experiments/: certify_transformer.py  run_bert.py
tests/: benchmark_bert_diff.py  benchmark_diff_verification.py  benchmark_vit_diff.py  test_basics.py  test_bert_verification.py  test_boundlab.py  test_certify_split.py  test_diff_zono3.py  test_diff_zono3_activations.py  test_einsum_and_sum.py  test_einsum_hardmard.py  test_einsum_jacobian_scatter.py  test_einsum_shape_fusion.py  test_einsum_slice_fusion.py  test_einsum_sparse_api.py  test_factor_graph_tensor.py  test_gather_slice.py  test_gradlin.py  test_heaviside_linearizer.py  test_hex_cheby.py  test_linearop.py  test_linearop_mctsum.py  test_new_linearop.py  test_prop_eqprop.py  test_reduce_mean.py  test_reduce_ops.py  test_sparse_coo_todo.py  test_sparse_ops.py  test_sparse_shape_ops.py  test_sparse_tn.py  test_square_matmul.py  test_tanh_linearizer_comparison.py  test_torchtable.py  test_transformer.py  test_tuple.py  test_vit.py  (+4 more)
(+365 files in other folders)
